# nexus

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  WINDOWS.md  deny.toml  rust_out  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  on_air_report.md
.github/workflows/: ci.yml  fcc-states.yml
crates/deepcw/: Cargo.toml
crates/deepcw/src/: lib.rs
crates/ft1/: Cargo.toml
crates/ft1-sys/: Cargo.toml  build.rs
crates/ft4/: Cargo.toml
crates/ft8/: Cargo.toml
crates/modes/: Cargo.toml
crates/modes/src/: decode.rs  lib.rs  mode.rs  source.rs
crates/propagation/: Cargo.toml
crates/propagation/data/itu/: itu_copyright.txt
crates/propagation/examples/: dxped_calendar.rs  live_snapshot.rs
crates/propagation/src/: achievements.rs  advisor.rs  awards.rs  dxcc.rs  dxped.rs  engine.rs  fccstate.rs  geo.rs  gettingout.rs  gridrarity.rs  gridstate.rs  insight.rs  journey.rs  kc2g.rs  lib.rs  likelihood.rs  mapspots.rs  model.rs  needalert.rs  opening.rs  pca.rs  pota.rs  predict.rs  pskr_mqtt.rs  sat.rs  skimmers.csv  solar_cycle.rs  solar_wind.rs  space_wx.rs  spot.rs  stats.rs  swpc_scales.rs  wmm.rs
crates/propagation/src/live/: aurora.rs  cloudlog.rs  clublog.rs  contests.rs  dxped.rs  eqsl.rs  hamqth.rs  hrdlog.rs  kc2g.rs  lotw.rs  lotw_users.rs  mod.rs  pota.rs  protons.rs  pskreporter.rs  qrz.rs  satnogs.rs  solar_cycle.rs  solar_wind.rs  swpc.rs  swpc_scales.rs  tle.rs  wspr.rs
crates/propagation/src/p533/: absorption.rs  coeffs.rs  cp.rs  engine.rs  fieldstrength.rs  fieldstrength_long.rs  geometry.rs  ionosphere.rs  magfield.rs  mod.rs  muf.rs  noise.rs  power.rs  reliability.rs  solar.rs
crates/propagation/tests/fixtures/itu/: caracas_iso.out  iongrid_spots.txt  moscow_iso.out  sydney_iso.out
crates/tempo-app/: Cargo.toml
crates/tempo-app/src/: alltxt.rs  bandplan.rs  dto.rs  engine.rs  lib.rs  privileges.rs  settings.rs  station.rs  update.rs
crates/tempo-app/tests/: broadcast.rs  decoder_ctx.rs  engine_loopback.rs  engine_modes.rs  watch_identity.rs
crates/tempo-app/tests/fixtures/: watch_identity_snapshot.json  watch_identity_spectrum.json
crates/tempo-audio/: Cargo.toml
crates/tempo-audio/examples/: audio_probe.rs
crates/tempo-audio/src/: aicw.rs  backend.rs  capture_resample.rs  device.rs  flexspectrum.rs  frames.rs  lib.rs  monitor.rs  port_prober.rs  ports.rs  resample.rs  rig.rs  rigctld_proc.rs  rigctld_server.rs  rigmodels.rs  rotator.rs  rttyrx.rs  runtime.rs  serial_keyer.rs  service.rs  slot.rs  usbrig.rs  voice.rs  winkeyer.rs
crates/tempo-audio/src/civ/: broker.rs  commands.rs  diag.rs  engine.rs  frame.rs  mod.rs  scope.rs  state.rs
crates/tempo-core/: Cargo.toml
crates/tempo-core/src/: channel.rs  clublog.rs  cw.rs  cw_decode.rs  cw_parse.rs  diagnostics.rs  eqsl.rs  fd_rules.rs  fieldday.rs  hamqth.rs  hrdlog.rs  inbox.rs  lib.rs  logbook.rs  lotw.rs  lotw_upload.rs  message.rs  pota.rs  qrz.rs  qso.rs  qsy.rs  reconcile.rs  roster.rs  spectrum.rs  store.rs  text.rs  timing.rs  tx.rs  wavfile.rs
crates/tempo-core/src/rtty/: baudot.rs  mod.rs  seq.rs
crates/tempo-core/tests/: awgn_threshold.rs  fieldday_loopback.rs  harq_loopback.rs  loopback_acquire.rs  loopback_rt.rs  messaging.rs  qso_loopback.rs
crates/tempo-fast-sys/: build.rs  manifest_gate.rs
crates/tempo-net/: Cargo.toml
crates/tempo-net/src/: cluster.rs  flexcat.rs  flexdisc.rs  flexvita.rs  lib.rs  mqtt.rs  n1mm.rs  n3fjp.rs  pskreporter.rs  qds.rs  server.rs  sntp.rs  wsjtx.rs
docs/: ARCHITECTURE.md  FREQUENCIES.md  FT1-Protocol.html  FT1-Protocol.md  OVERVIEW.md  RELEASE_NOTES-0.15.1.md  RELEASE_NOTES-0.15.11.md  RELEASE_NOTES-0.15.13.md  Tempo-Product-Brief.html  Tempo-Product-Brief.md  faq.md  install.md  interop.md  multi-radio-rollback.md  quick-start.md  troubleshooting.md
docs/guide/: awards-journey.md  connect.md  contesting-pota.md  cw.md  dxpeditions.md  index.md  logbook-qsl.md  needed-dx.md  operate-digital.md  phone.md  satellites.md  settings-reference.md
docs/launch/: RELEASE_NOTES-0.3.0-beta.md  RELEASE_NOTES-0.5.2.md
docs/manual/: Architecture-and-Protocol.md  Building-from-Source.md  CW.md  Connect-Propagation.md  FAQ.md  Field-Day.md  Frequency-Plan.md  Getting-Started.md  Integrations.md  Logbook-and-Awards.md  Needed-and-Hunting.md  Operate-FT8-FT4.md  POTA-SOTA.md  Phone.md  Privacy-and-Coordinated-QSY.md  README.md  Rig-and-Audio-Setup.md  Roadmap.md  Tempo-Chat.md  Troubleshooting.md
docs/protocols/: dx1.md  ft1.md  index.md
docs/rigs/: flexradio.md  icom.md  index.md  rotators.md  xiegu.md  yaesu.md
libft1/: CMakeLists.txt  ft1_cabi.f90  ft4_cabi.f90  ft8_cabi.f90  ft8_stdcall.f90  mingw-w64.cmake
libft1/dx1/: dx1_band_test.f90  dx1_decode.f90  dx1_decode_all.f90  dx1_detect.f90  dx1_llr.f90  dx1_params.f90  dx1_sync.f90  dx1_test.f90  gen_dx1wave.f90
libft1/include/: libft1.h
libtempo/: ft8_cabi.f90  modem-state-manifest.toml
scripts/: Dockerfile.pi  build-linux.sh  build-windows-cross.sh  build-windows.ps1  build-windows.sh  capture-gif.mjs  check-no-demo.sh  fetch-hamlib.sh  gen-banner.py  gen-fcc-states.mjs  gen-grid-rarity.mjs  gen-grid-state.mjs  gen-icons.py  mirror-to-sourceforge.sh  package-lock.json  package.json  screenshots.mjs
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/resources/deepcw/: README.md
src-tauri/resources/hamlib/: .gitignore  README.md
src-tauri/src/: chains.rs  lib.rs  main.rs
tests/: acquire.c  ft4_acquire.c  ft8_acquire.c  roundtrip.c
ui/: DESIGN.md  index.html  package-lock.json  package.json  tokens.json  vite.config.ts
ui/design/: verify.mjs
ui/src/: App.tsx  DetachedPanel.test.tsx  DetachedPanel.tsx  alerts.test.ts  alerts.ts  api.ts  band.ts  bandColors.ts  build-id.d.ts  cockpit-floors.test.ts  colormaps.test.ts  colormaps.ts  connectLayout.test.ts  decodeHistory.ts  (+63 more)
(+191 files in other folders)
