[package]
publish = false
name = "tempo-app"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tempo UI-facing application logic: wraps tempo-core into serializable DTOs and command methods, decoupled from Tauri/audio so it builds and unit-tests headless"

[dependencies]
tempo-core = { path = "../tempo-core" }
modes = { path = "../modes" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
