[package]
publish = false
name = "tempo-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tempo transceiver core — slot timing, virtual-air channel, TX/RX engine over the FT1 modem"

[dependencies]
ft1 = { path = "../ft1" }
modes = { path = "../modes" }
