[package]
publish = false
name = "tempo-net"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WSJT-X-compatible UDP network output + PSK Reporter spotting so third-party ham apps (JTAlert, GridTracker, N1MM, loggers) interoperate with Nexus. Pure Rust."

[dependencies]
# Flex discovery must SHARE UDP 4992 with a co-hosted SmartSDR (both sides set
# SO_REUSEADDR); std exposes no socket options, socket2 is already in the tree
# via tokio.
socket2 = "0.6"
